--- a/.github/workflows/OWRT-CORE.yml
+++ b/.github/workflows/OWRT-CORE.yml
@@ -44,6 +44,8 @@ jobs:
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
+          docker stop $(docker ps -a -q)
+          docker rm $(docker ps -a -q)
           docker rmi $(docker images -q)
           sudo -E rm -rf $(cat $GITHUB_WORKSPACE/Depends.txt | sed -n "1{s/\r$//;p;q}")
           sudo -E apt -yqq update
