--- a/.github/workflows/CMCC-RAX3000M-Lede.yml
+++ b/.github/workflows/CMCC-RAX3000M-Lede.yml
@@ -15,14 +15,14 @@ permissions: write-all
 jobs:
   owrt_config:
     #调用公用编译核心OWRT-CORE.yml
-    uses: ./.github/workflows/OWRT-CORE.yml
+    uses: ./.github/workflows/OWRT-RAX3000M-NAND.yml
     with:
       #编译，RAX3000M通用配置
       OWRT_TARGET: mt798x
       #默认主题
       OWRT_THEME: bootstrap
       #默认主机名
-      OWRT_NAME: CMCC
+      OWRT_NAME: CMCC-RAX3000M-NAND
       #默认密码，仅作展示，更改无效
       OWRT_PW: password
       #默认地址
