--- a/.github/workflows/CMCC-RAX3000M-EMMC-Lede.yml
+++ b/.github/workflows/CMCC-RAX3000M-EMMC-Lede.yml
@@ -18,7 +18,7 @@ jobs:
     uses: ./.github/workflows/OWRT-RAX3000M-EMMC.yml
     with:
       #编译，RAX3000M通用配置
-      OWRT_TARGET: OWRT-RAX3000M-EMMC
+      OWRT_TARGET: mt798x-RAX3000M-EMMC
       #默认主题
       OWRT_THEME: bootstrap
       #默认主机名
