--- a/.github/workflows/OWRT-RAX3000M-NAND.yml
+++ b/.github/workflows/OWRT-RAX3000M-NAND.yml
@@ -148,15 +148,11 @@ jobs:
           $GITHUB_WORKSPACE/Scripts/Renames.sh
 
       - name: Release Firmware
-        uses: softprops/action-gh-release@master
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{env.OWRT_TARGET}}_${{env.OWRT_SOURCE}}_${{env.OWRT_DATE}}
           files: ./owrt/upload/*.*
           body: |
-            这是个平台固件包，内含多个设备！
-            请注意选择你需要的设备固件！
-            不要问，更就完事了！
-
             源码：${{env.OWRT_SOURCE}}
             平台：${{env.OWRT_TARGET}}
             设备：${{env.OWRT_TYPE}}
@@ -164,13 +160,13 @@ jobs:
             地址：${{env.OWRT_IP}}
 
       - name: Delete Old Releases
-        uses: dev-drprasad/delete-older-releases@master
+        uses: dev-drprasad/delete-older-releases@v0.2.1
         with:
           keep_latest: 6
           delete_tags: true
 
       - name: Delete Old Workflows
-        uses: Mattraks/delete-workflow-runs@main
+        uses: Mattraks/delete-workflow-runs@v2
         with:
           retain_days: 0
           keep_minimum_runs: 1
