--- a/.github/workflows/OWRT-RAX3000M-EMMC.yml
+++ b/.github/workflows/OWRT-RAX3000M-EMMC.yml
@@ -160,7 +160,7 @@ jobs:
             地址：${{env.OWRT_IP}}
 
       - name: Delete Old Releases
-        uses: dev-drprasad/delete-older-releases@0.2.1
+        uses: dev-drprasad/delete-older-releases@v0.2.1
         with:
           keep_latest: 6
           delete_tags: true
