--- a/.github/workflows/CMCC-RAX3000M-NAND-Lede.yml
+++ b/.github/workflows/CMCC-RAX3000M-NAND-Lede.yml
@@ -20,7 +20,7 @@ jobs:
       #编译，RAX3000M通用配置
       OWRT_TARGET: mt798x-RAX3000M-NAND
       #默认主题
-      OWRT_THEME: bootstrap
+      OWRT_THEME: argon
       #默认主机名
       OWRT_NAME: CMCC-RAX3000M-NAND
       #默认密码，仅作展示，更改无效
