--- a/.github/workflows/OWRT-RAX3000M-EMMC.yml
+++ b/.github/workflows/OWRT-RAX3000M-EMMC.yml
@@ -40,7 +40,7 @@ jobs:
       - name: 检查
         uses: actions/checkout@main
 
-      - name: Initialization Environment
+      - name: 初始化环境
         env:
           DEBIAN_FRONTEND: noninteractive
         run: |
@@ -54,7 +54,7 @@ jobs:
           sudo -E systemctl daemon-reload
           sudo -E timedatectl set-timezone "Asia/Shanghai"
 
-      - name: 初始化环境
+      - name: 设置环境
         run: |
           export OWRT_DATE=$(TZ=UTC-8 date +"%y.%m.%d_%H.%M.%S")
           export OWRT_SOURCE=$(echo $OWRT_URL | cut -d '/' -f 5-)
