--- a/.github/workflows/OWRT-RAX3000M-NAND.yml
+++ b/.github/workflows/OWRT-RAX3000M-NAND.yml
@@ -54,7 +54,7 @@ jobs:
           sudo -E systemctl daemon-reload
           sudo -E timedatectl set-timezone "Asia/Shanghai"
 
-      - name: 设置变量
+      - name: 设置环境
         run: |
           export OWRT_DATE=$(TZ=UTC-8 date +"%y.%m.%d_%H.%M.%S")
           export OWRT_SOURCE=$(echo $OWRT_URL | cut -d '/' -f 5-)
