--- a/.github/workflows/IWRT-RAX3000M-EMMC.yml
+++ b/.github/workflows/IWRT-RAX3000M-EMMC.yml
@@ -39,7 +39,7 @@ env:
 
 jobs:
   owrt_core:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: 检查
         uses: actions/checkout@main
