--- a/.github/workflows/OWRT-RAX3000M-NAND.yml
+++ b/.github/workflows/OWRT-RAX3000M-NAND.yml
@@ -34,7 +34,7 @@ env:
   OWRT_IP: ${{inputs.OWRT_IP}}
 
 jobs:
-  owrt_core:
+  owrt_build:
     runs-on: ubuntu-latest
     steps:
       - name: 检查
