--- a/.github/workflows/CMCC-RAX3000M-EMMC-IWRT.yml
+++ b/.github/workflows/CMCC-RAX3000M-EMMC-IWRT.yml
@@ -13,7 +13,7 @@ permissions: write-all
 
 #CI任务
 jobs:
-  owrt_config:
+  Iwrt_config:
     #调用公用编译核心OWRT-CORE.yml
     uses: ./.github/workflows/IWRT-RAX3000M-EMMC.yml
     with:
