--- a/.github/workflows/OWRT-RAX3000M-NAND.yml
+++ b/.github/workflows/OWRT-RAX3000M-NAND.yml
@@ -112,7 +112,7 @@ jobs:
           cd ./owrt
 
           rm -rf ./tmp* ./.config*
-          cat $GITHUB_WORKSPACE/Config/$OWRT_TARGET.txt $GITHUB_WORKSPACE/Config/mt798x-RAX3000M-EMMC.txt >> .config
+          cat $GITHUB_WORKSPACE/Config/$OWRT_TARGET.txt $GITHUB_WORKSPACE/Config/RAX3000M-NAND-21.02.txt >> .config
 
           $GITHUB_WORKSPACE/Scripts/Extras.sh
 
