--- a/.github/workflows/IWRT-RAX3000M-NAND.yml
+++ b/.github/workflows/IWRT-RAX3000M-NAND.yml
@@ -116,7 +116,7 @@ jobs:
           cd ./owrt
 
           rm -rf ./tmp* ./.config*
-          cat $GITHUB_WORKSPACE/Config/$OWRT_TARGET.txt $GITHUB_WORKSPACE/Config/mt798x-RAX3000M-NAND.txt >> .config
+          cat $GITHUB_WORKSPACE/Config/$OWRT_TARGET.txt $GITHUB_WORKSPACE/Config/RAX3000M-NAND-23.05.txt >> .config
 
           $GITHUB_WORKSPACE/Scripts/Extras.sh
 
