--- a/.github/workflows/IWRT-RAX3000M-EMMC.yml
+++ b/.github/workflows/IWRT-RAX3000M-EMMC.yml
@@ -2,6 +2,14 @@
 name: IWRT-RAX3000M-EMMC
 
 on:
+  workflow_dispatch:
+    inputs:
+      USE_NX30PRO_EEPROM:
+        description: 'Use nx30pro eeprom'
+        required: true
+        default: true
+        type: boolean
+
   #公用核心标识
   workflow_call:
     inputs:
@@ -121,8 +129,14 @@ jobs:
           $GITHUB_WORKSPACE/Scripts/Extras.sh
 
           make defconfig
+      - name: 设置是否使用 nx30pro eeprom
+        if: env.USE_NX30PRO_EEPROM == 'true'
+        run: |
+          mkdir -p ./owrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek
+          cp eeprom/nx30pro_eeprom.bin ./owrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek
+          sed -i -e '/caldata_extract_mmc "factory" 0x0 0x1000/ a\           cp /lib/firmware/mediatek/nx30pro_eeprom.bin /lib/firmware/mediatek/mt7981_eeprom_mt7976_dbdc.bin' ./owrt/target/linux/mediatek/filogic/base-files/etc/hotplug.d/firmware/11-mt76-caldata
 
-      - name: 清理目录
+      - name: make dirclean
         run: |
           cd ./owrt
 
