--- a/.github/workflows/IWRT-RAX3000M-EMMC.yml
+++ b/.github/workflows/IWRT-RAX3000M-EMMC.yml
@@ -2,14 +2,6 @@
 name: IWRT-RAX3000M-EMMC
 
 on:
-  workflow_dispatch:
-    inputs:
-      USE_NX30PRO_EEPROM:
-        description: 'Use nx30pro eeprom'
-        required: true
-        default: true
-        type: boolean
-
   #公用核心标识
   workflow_call:
     inputs:
@@ -129,8 +121,7 @@ jobs:
           $GITHUB_WORKSPACE/Scripts/Extras.sh
 
           make defconfig
-      - name: 设置是否使用 nx30pro eeprom
-        if: env.USE_NX30PRO_EEPROM == 'true'
+      - name: 使用 nx30pro eeprom
         run: |
           mkdir -p ./owrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek
           cp eeprom/nx30pro_eeprom.bin ./owrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek
