--- a/.github/workflows/IWRT-RAX3000M-EMMC.yml
+++ b/.github/workflows/IWRT-RAX3000M-EMMC.yml
@@ -121,11 +121,13 @@ jobs:
           $GITHUB_WORKSPACE/Scripts/Extras.sh
 
           make defconfig
+
       - name: 使用 nx30pro eeprom
         run: |
-          mkdir -p ./owrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek
-          cp eeprom/nx30pro_eeprom.bin ./owrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek
-          sed -i -e '/caldata_extract_mmc "factory" 0x0 0x1000/ a\           cp /lib/firmware/mediatek/nx30pro_eeprom.bin /lib/firmware/mediatek/mt7981_eeprom_mt7976_dbdc.bin' ./owrt/target/linux/mediatek/filogic/base-files/etc/hotplug.d/firmware/11-mt76-caldata
+          mkdir ./owrt/target/linux/mediatek/mt7981/base-files/lib/firmware
+          cp eeprom/nx30pro_eeprom.bin ./owrt/target/linux/mediatek/mt7981/base-files/lib/firmware/MT7981_iPAiLNA_EEPROM.bin
+          sed -i 's/caldata_extract_mmc/# caldata_extract_mmc/' ./owrt/target/linux/mediatek/mt7981/base-files/lib/preinit/90_extract_caldata
+          sed -i 's#./files/mt7981-default-eeprom/MT7981_iPAiLNA_EEPROM.bin##' ./owrt/package/mtk/drivers/mt_wifi/Makefile
 
       - name: make dirclean
         run: |
