--- a/.github/workflows/IWRT-RAX3000M-NAND.yml
+++ b/.github/workflows/IWRT-RAX3000M-NAND.yml
@@ -120,6 +120,13 @@ jobs:
 
           make defconfig
 
+      - name: 设置是否使用 nx30pro eeprom
+        run: |
+         mkdir -p openwrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek
+         cp eeprom/nx30pro_eeprom.bin openwrt/target/linux/mediatek/filogic/base-files/lib/firmware/mediatek
+         sed -i -e '/caldata_extract_mmc "factory" 0x0 0x1000/ a\           
+         cp /lib/firmware/mediatek/nx30pro_eeprom.bin /lib/firmware/mediatek/mt7981_eeprom_mt7976_dbdc.bin' openwrt/target/linux/mediatek/filogic/base-files/etc/hotplug.d/firmware/11-mt76-caldata
+
       - name: 清理目录
         run: |
           cd ./owrt
