--- a/.github/workflows/CMCC-RAX3000M-NAND-IWRT.yml
+++ b/.github/workflows/CMCC-RAX3000M-NAND-IWRT.yml
@@ -23,6 +23,6 @@ jobs:
       #默认地址
       OWRT_IP: 192.168.6.1
       #默认源码
-      OWRT_URL: https://github.com/immortalwrt/immortalwrt.git
+      OWRT_URL: https://github.com/immortalwrt/immortalwrt
       #源码分支
       OWRT_BRANCH: openwrt-23.05 
