--- a/.github/workflows/237-RAX3000M-EMMC.yml
+++ b/.github/workflows/237-RAX3000M-EMMC.yml
@@ -102,7 +102,7 @@ jobs:
           cd ./owrt
 
           rm -rf ./tmp* ./.config*
-          cat $GITHUB_WORKSPACE/Config/$OWRT_TARGET.txt $GITHUB_WORKSPACE/Config/RAX3000M-EMMC-23.05.txt >> .config
+          cat $GITHUB_WORKSPACE/Config/$OWRT_TARGET.txt $GITHUB_WORKSPACE/Config/RAX3000M-EMMC-237.txt >> .config
 
           $GITHUB_WORKSPACE/Scripts/Extras.sh
 
