--- a/.github/workflows/237-RAX3000M-NAND.yml
+++ b/.github/workflows/237-RAX3000M-NAND.yml
@@ -35,7 +35,7 @@ env:
 
 jobs:
   iwrt_core:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: 检查
         uses: actions/checkout@main
